--- a/synkhole.yml
+++ b/synkhole.yml
@@ -6,7 +6,7 @@
       assert:
         that: "ansible_version.full | version_compare('{{ansible_required_version}}', '==')"
         msg: >
-          "Wolke only runs with Ansible version  {{ansible_required_version}}"
+          "This project only runs with Ansible version  {{ansible_required_version}}"
       tags:
        - always
 
